--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,27 +3,31 @@ services:
 
 ## Router
   router01:
-    image: mongo:6.0.1
+    image: mongo:4.4
     container_name: router-01
     command: mongos --port 27017 --configdb rs-config-server/configsvr01:27017,configsvr02:27017,configsvr03:27017 --bind_ip_all
     ports:
       - 27117:27017
     volumes:
       - ./scripts:/scripts
-  router02:
-    image: mongo:6.0.1
-    container_name: router-02
-    command: mongos --port 27017 --configdb rs-config-server/configsvr01:27017,configsvr02:27017,configsvr03:27017 --bind_ip_all
-    volumes:
-      - ./scripts:/scripts
-    ports:
-      - 27118:27017
-    links:
-      - router01
+    cap_add:
+      - NET_ADMIN
+#  router02:
+#    image: mongo:4.4
+#    container_name: router-02
+#    command: mongos --port 27017 --configdb rs-config-server/configsvr01:27017,configsvr02:27017,configsvr03:27017 --bind_ip_all
+#    volumes:
+#      - ./scripts:/scripts
+#    ports:
+#      - 27118:27017
+#    links:
+#      - router01
+#    cap_add:
+#      - NET_ADMIN
 
 ## Config Servers
   configsvr01:
-    image: mongo:6.0.1
+    image: mongo:4.4
     container_name: mongo-config-01 
     command: mongod --port 27017 --configsvr --replSet rs-config-server
     volumes:
@@ -35,7 +39,7 @@ services:
       - shard02-a
       - shard03-a
   configsvr02:
-    image: mongo:6.0.1
+    image: mongo:4.4
     container_name: mongo-config-02 
     command: mongod --port 27017 --configsvr --replSet rs-config-server
     volumes:
@@ -45,7 +49,7 @@ services:
     links:
       - configsvr01
   configsvr03:
-    image: mongo:6.0.1
+    image: mongo:4.4
     container_name: mongo-config-03 
     command: mongod --port 27017 --configsvr --replSet rs-config-server
     volumes:
@@ -59,7 +63,7 @@ services:
   ## Shards 01
    
   shard01-a:
-    image: mongo:6.0.1
+    image: mongo:4.4
     container_name: shard-01-node-a
     command: mongod --port 27017 --shardsvr --replSet rs-shard-01
     volumes:
@@ -69,26 +73,45 @@ services:
     links:
       - shard01-b
       - shard01-c
+    cap_add:
+      - NET_ADMIN
+    deploy:
+      resources:
+        limits:
+          cpus: 0.15
+
   shard01-b:
-    image: mongo:6.0.1
+    image: mongo:4.4
     container_name: shard-01-node-b
     command: mongod --port 27017 --shardsvr --replSet rs-shard-01
     volumes:
       - ./scripts:/scripts
     ports:
       - 27123:27017
+    cap_add:
+      - NET_ADMIN
+    deploy:
+      resources:
+        limits:
+          cpus: 0.15
   shard01-c:
-    image: mongo:6.0.1
+    image: mongo:4.4
     container_name: shard-01-node-c
     command: mongod --port 27017 --shardsvr --replSet rs-shard-01
     volumes:
       - ./scripts:/scripts
     ports:
       - 27124:27017
+    cap_add:
+      - NET_ADMIN
+    deploy:
+      resources:
+        limits:
+          cpus: 0.15
 
   ## Shards 02
   shard02-a:
-    image: mongo:6.0.1
+    image: mongo:4.4
     container_name: shard-02-node-a
     command: mongod --port 27017 --shardsvr --replSet rs-shard-02
     volumes:
@@ -98,26 +121,44 @@ services:
     links:
       - shard02-b
       - shard02-c
+    cap_add:
+      - NET_ADMIN
+    deploy:
+      resources:
+        limits:
+          cpus: 0.15
   shard02-b:
-    image: mongo:6.0.1
+    image: mongo:4.4
     container_name: shard-02-node-b
     command: mongod --port 27017 --shardsvr --replSet rs-shard-02
     volumes:
       - ./scripts:/scripts
     ports:
       - 27126:27017
+    cap_add:
+      - NET_ADMIN
+    deploy:
+      resources:
+        limits:
+          cpus: 0.15
   shard02-c:
-    image: mongo:6.0.1
+    image: mongo:4.4
     container_name: shard-02-node-c
     command: mongod --port 27017 --shardsvr --replSet rs-shard-02
     volumes:
       - ./scripts:/scripts
     ports:
       - 27127:27017
+    cap_add:
+      - NET_ADMIN
+    deploy:
+      resources:
+        limits:
+          cpus: 0.15
 
   ## Shards 03
   shard03-a:
-    image: mongo:6.0.1
+    image: mongo:4.4
     container_name: shard-03-node-a
     command: mongod --port 27017 --shardsvr --replSet rs-shard-03
     volumes:
@@ -127,21 +168,37 @@ services:
     links:
       - shard03-b
       - shard03-c
+    cap_add:
+      - NET_ADMIN
+    deploy:
+      resources:
+        limits:
+          cpus: 0.15
   shard03-b:
-    image: mongo:6.0.1
+    image: mongo:4.4
     container_name: shard-03-node-b
     command: mongod --port 27017 --shardsvr --replSet rs-shard-03
     volumes:
       - ./scripts:/scripts
     ports:
       - 27129:27017
+    cap_add:
+      - NET_ADMIN
+    deploy:
+      resources:
+        limits:
+          cpus: 0.15
   shard03-c:
-    image: mongo:6.0.1
+    image: mongo:4.4
     container_name: shard-03-node-c
     command: mongod --port 27017 --shardsvr --replSet rs-shard-03
     volumes:
       - ./scripts:/scripts
     ports:
       - 27130:27017
-
-  
+    cap_add:
+      - NET_ADMIN
+    deploy:
+      resources:
+        limits:
+          cpus: 0.15
